# test_task_jetlend_promotional_codes

./: .env-example  README.md  pyproject.toml
promocodes/: manage.py
promocodes/config/: asgi.py  settings.py  urls.py  wsgi.py
promocodes/goods/: models.py
promocodes/goods/migrations/: 0001_initial.py
promocodes/orders/: models.py  serializers.py  services.py  urls.py  views.py
promocodes/orders/management/commands/: fill_db.py
promocodes/orders/migrations/: 0001_initial.py  0002_initial.py  0003_alter_order_total_discount.py
promocodes/users/: models.py
promocodes/users/migrations/: 0001_initial.py
scripts/: format.py
